[package]
name = "chameleon"
version = "0.1.5"
edition = "2024"

[features]
inner-struct = []

[dependencies]
serde = {version = "1.0.225", features = ["derive"] }
mlua = {version = "0.11.5", features = ["luajit", "vendored", "serde", "anyhow", "send"]}
iced = {version =  "0.13.0", features = ["svg"] }
toml = "0.9.8"
anyhow = "1.0.100"